@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Documentation fixes
+  - Handle DLLs with upper-case characters in extension on MSWin32
 
 0.20      2018-06-04 18:18:09 -0400
   - Add system_path function.
